--- a/apache2/conf/httpd.conf
+++ b/apache2/conf/httpd.conf
@@ -41,7 +41,7 @@
 # at a local disk.  If you wish to share the same ServerRoot for multiple
 # httpd daemons, you will need to change at least LockFile and PidFile.
 #
-ServerRoot "C:/Users/seppe.depauw/Desktop/GIP/apache2"
+ServerRoot "C:/Users/seppe/Documents/GitHub/GIP/apache2"
 
 #
 # Listen: Allows you to bind Apache to specific IP addresses and/or
@@ -223,7 +223,7 @@ ServerName localhost:8080
 # documents. By default, all requests are taken from this directory, but
 # symbolic links and aliases may be used to point to other locations.
 #
-DocumentRoot "C:/Users/seppe.depauw/Desktop/GIP/root"
+DocumentRoot "C:/Users/seppe/Documents/GitHub/GIP/root"
 
 #
 # Each directory to which Apache has access can be configured with respect
@@ -250,7 +250,7 @@ DocumentRoot "C:/Users/seppe.depauw/Desktop/GIP/root"
 #
 # This should be changed to whatever you set DocumentRoot to.
 #
-<Directory "C:/Users/seppe.depauw/Desktop/GIP/root">
+<Directory "C:/Users/seppe/Documents/GitHub/GIP/root">
     #
     # Possible values for the Options directive are "None", "All",
     # or any combination of:
@@ -370,7 +370,7 @@ LogLevel warn
     # client.  The same rules about trailing "/" apply to ScriptAlias
     # directives as to Alias.
     #
-    ScriptAlias /cgi-bin/ "C:/Users/seppe.depauw/Desktop/GIP/root/cgi-bin/"
+    ScriptAlias /cgi-bin/ "C:/Users/seppe/Documents/GitHub/GIP/root/cgi-bin/"
 
 </IfModule>
 
@@ -383,10 +383,10 @@ LogLevel warn
 </IfModule>
 
 #
-# "C:/Users/seppe.depauw/Desktop/GIP/cgi-bin" should be changed to whatever your ScriptAliased
+# "C:/Users/seppe/Documents/GitHub/GIP/cgi-bin" should be changed to whatever your ScriptAliased
 # CGI directory exists, if you have that configured.
 #
-#<Directory "C:/Users/seppe.depauw/Desktop/GIP/root/cgi-bin">
+#<Directory "C:/Users/seppe/Documents/GitHub/GIP/root/cgi-bin">
 #    AllowOverride All
 #    Options None
 #    Order allow,deny
@@ -530,17 +530,17 @@ SSLRandomSeed connect builtin
 </IfModule>
 
 # For PHP 5 do something like this:
-LoadModule php5_module "C:/Users/seppe.depauw/Desktop/GIP/php/php5apache2_4.dll"
+LoadModule php5_module "C:/Users/seppe/Documents/GitHub/GIP/php/php5apache2_4.dll"
 AddType application/x-httpd-php .php
 AddType application/x-httpd-php-source .phps
 # configure the path to php.ini
-PHPIniDir "C:/Users/seppe.depauw/Desktop/GIP/php"
+PHPIniDir "C:/Users/seppe/Documents/GitHub/GIP/php"
 
 
 ### PHPMYADMIN ###
-Alias /phpmyadmin "C:/Users/seppe.depauw/Desktop/GIP/phpmyadmin/"
+Alias /phpmyadmin "C:/Users/seppe/Documents/GitHub/GIP/phpmyadmin/"
 
-<Directory "C:/Users/seppe.depauw/Desktop/GIP/phpmyadmin/">
+<Directory "C:/Users/seppe/Documents/GitHub/GIP/phpmyadmin/">
     AllowOverride All
     Order allow,deny
     Allow from all
